--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,39 @@ body{
     background: #0a192f;
     color: #c5cfde;
 }
+.li_navbar {
+    transition: 0.3s;
+}
+
+.li_navbar:hover {
+    color: #bf42ce;
+}
+
+
+.xxx{
+    position: fixed;
+    top: 35%;
+    left: 0;
+    z-index: 2;
+}
+.small_container{
+    position: relative;
+    left: -110px;
+    transition: 0.5s;
+}
+
+.small_container:hover {
+    left: 0;
+    cursor: pointer;
+}
+
+.all_nav {
+    z-index: 3;
+}
+
+button{
+    padding: 10px 30px;
+    border: 2px solid #eff3ff;
+    /*transition: 0.4s;*/
+}
+
