--- a/src/Components/Modal/Modal.module.css
+++ b/src/Components/Modal/Modal.module.css
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /*z-index: 20;*/
+    z-index: 40;
     /*width: 100%;*/
     /*height: 100%;*/
 
